# envexa

./: .gitignore  AGENTS.md  AGENTS.md.bak  Cargo.toml  Contributing.md  ERRORS.md  Handoff.md  README.md  package.json  pr_body.md  pyproject.toml  release_notes.md  test_output.txt  test_select.rs
.antigravitycli/: 6eb19d59-2187-4f83-9460-bb839192450a.json
.github/ISSUE_TEMPLATE/: RELEASES.md
.github/workflows/: ci.yml  release.yml
docs/: TECH_STACK.md  benchmark.md
frontend/: README.md  bun-dev-server.ts  index.html  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: app-sidebar.tsx  project-path-selector.tsx
frontend/src/components/ui/: sonner.tsx  tabs.tsx
frontend/src/routes/: __root.tsx  index.tsx  logs.tsx  settings.tsx  toolchains.tsx  vulnerabilities.tsx
scripts/: build-and-upload.sh  install.sh
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  mismatches.py  scanner.py  scanner.rs  server.py  server.rs  transport.rs  ui.rs  unused.py
src/core/: cli.rs  config.rs
src/scanner/: mod.rs  sarif.rs
src/toolchains/: audit.rs  brew.py  brew.rs  bun.py  bun.rs  cargo.py  cargo.rs  ci.rs  cleanup.rs  deno.py  deno.rs  docker.py  docker.rs  gem.py  gem.rs  git.rs  mod.rs  npm.py  npm.rs  pip.py  pip.rs  pnpm.py  pnpm.rs  project.rs  security.rs  supply_chain.rs  yarn.py  yarn.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
tests/: README.md  integration_tests.rs  parser_tests.rs
