[package]
name = "envexa"
version = "2.11.0"
edition = "2021"
authors = ["Kurt Calacday <kurtcalacday15@gmail.com>"]
default-run = "envexa"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-piechart = "0.3.3"
throbber-widgets-tui = "0.11.0"
uuid = { version = "1.23.1", features = ["v4"] }
futures = "0.3.32"
mimalloc = "0.1.52"
lazy_static = "1.5.0"
axum = "0.8.9"
rust-embed = { version = "8.11.0", features = ["debug-embed"] }
mime_guess = "2.0.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
panic = "abort"
